--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -21,6 +21,12 @@ framework:
     fragments:       ~
     http_method_override: true
 
+services: 
+  twig.extension.text:
+    class: Twig_Extensions_Extension_Text
+    tags:
+      - { name: twig.extension }
+
 # Twig Configuration
 twig:
     debug:            %kernel.debug%
@@ -34,6 +40,13 @@ assetic:
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
+        lessphp:
+            apply_to: "\.less$"
+            # Formatter options: compressed, lessjs, classic
+            formatter: "compressed"
+            preserve_comments: false
+            presets:
+                my_variable: "#000"
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
