--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,13 +40,13 @@ assetic:
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        lessphp:
+        less:
+            node: /usr/bin/node
+            node_paths: [/usr/lib/node_modules]
             apply_to: "\.less$"
-            # Formatter options: compressed, lessjs, classic
-            formatter: "compressed"
-            preserve_comments: false
-            presets:
-                my_variable: "#000"
+        cssrewrite: ~
+braincrafted_bootstrap:
+    less_filter: less        
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
