--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "doctrine/migrations": "1.0.*@dev",
         "doctrine/doctrine-migrations-bundle": "dev-master",
+        "stof/doctrine-extensions-bundle": "dev-master",
         "twig/extensions": "1.0.*",
         "symfony/assetic-bundle": "2.3.*",
         "symfony/swiftmailer-bundle": "2.3.*",
